--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -101,6 +101,10 @@
 
   const maxWidth = "180px"
   const perc = 0.5
+  function nulo (d){
+    console.log(d)
+    return ( d !== '' && d !== null && d !== undefined?  d : "Não Informado")
+  }
 
   const getBar = () => {
     return `
@@ -114,19 +118,18 @@
 const nodeContent = (d, i, arr, state) => {
   if (d.data.tipo == 0) {
           return `
-          <div style="background-color: #9999; height: 80px; box-sizing: border-box; border-radius: 10px;">
+          <div style="background-color: #223324; height: 80px; box-sizing: border-box; border-radius: 10px;">
           <div style="font-family: 'Inter', sans-serif;background-color:${color}; position:absolute;margin-top: 5px; margin-left:-1px;width:${d.width}px;height:${d.height}px;border-radius:10px;border: 1px solid #E4E2E9">
-          ${getSubortinates(d, i, arr, state)}
-          <div style="font-size:15px;color:#08011E;margin-left:20px;margin-top:12px; width: 140px; height: 10px"> ${
-             d.data.name
+          <div style="font-size:15px;color:#08011E;margin-left:20px;margin-top:12px; width: 540px; height: 10px; font-weight: bold"> ${
+             d.data.Area
           } </div>
-          <div style="display: flex; margin-left: 19px; margin-top: 10px; justify-content: space-between; margin-right: 40px; height: 16px; ">
+          <div style="display: flex; margin-left: 19px; margin-top: 10px; justify-content: space-between; margin-right: 30px; height: 16px; ">
               <p>Qtde de Objetivos</p>
-              <p style="font-weight: bold;">${d.data.objetivos}</p>
+              <p style="font-weight: bold;">${d.data.quant_Obj}</p>
           </div>
-          <div style="display: flex; margin-left: 19px; justify-content: space-between; margin-right: 40px; margin-bottom: 20px">
+          <div style="display: flex; margin-left: 19px; justify-content: space-between; margin-right: 30px; margin-bottom: 20px">
               <p>Qtde de Projetos</p>
-              <p style="font-weight: bold;">${d.data.projetos}</p>
+              <p style="font-weight: bold;">${d.data.Quant_Proj}</p>
           </div>
         </div>
       </div>
@@ -134,52 +137,59 @@ const nodeContent = (d, i, arr, state) => {
         }
   if (d.data.tipo == 1){
     return `
-    <div style="background-color: #ff0000; height: 80px; box-sizing: border-box; border-radius: 10px;">
+    <div style="background-color: #223324; height: 80px; box-sizing: border-box; border-radius: 10px;">
           <div style="font-family: 'Inter', sans-serif;background-color:${color}; position:absolute;margin-top: 5px; margin-left:-1px;width:${d.width}px;height:${d.height}px;border-radius:10px;border: 1px solid #E4E2E9">
-          ${getSubortinates(d, i, arr, state)}
-          <div style="font-size:15px;color:#08011E;margin-left:20px;margin-top:12px; width: 140px; height: 10px"> ${
-             d.data.name
-          } </div>
-          <div style="display: flex;">
-           ${getBar()}
-           <div style="margin-top: 23px; margin-left: 15px; font-family: 'sans-serif';">
-             <p>${perc * 100}%</p>
-           </div>
-           </div>
+          <div style="font-size:13px;color:#08011E;margin-left:20px;margin-top:20px; width: 540px; height: 10px; font-weight: 700"> 
+            Objetivo: ${d.data.A} </div>
+          <div style="display: flex; margin-left: 20px; justify-content: space-between; margin-right: 30px; margin-bottom: 20px; font-weight: 600; margin-top: 10px; font-size: 13px; font-family: 'Inter', sans-serif">
+              <p>Qtde de Projetos</p>
+              <p style="font-weight: bold;">${d.data.Quant_Proj}</p>
+          </div>
         </div>
       </div>
   `}
   if (d.data.tipo == 2){
     return `
-    <div style="background-color: #ffff0f;; height: 80px; box-sizing: border-box; border-radius: 10px;">
-          <div style="font-family: 'Inter', sans-serif;background-color:${color}; position:absolute;margin-top: 5px; margin-left:-1px;width:${d.width}px;height:${d.height}px;border-radius:10px;border: 1px solid #E4E2E9">
-          ${getSubortinates(d, i, arr, state)}
-          <div style="font-size:15px;color:#08011E;margin-left:20px;margin-top:12px; width: 140px; height: 10px"> ${
-             d.data.name
-          } </div>
-          <div style="display: flex;">
-           ${getBar()}
-           <div style="margin-top: 23px; margin-left: 15px; font-family: 'sans-serif';">
-             <p>${perc * 100}%</p>
-           </div>
-           </div>
+    <div style="background-color: #499276; height: 80px; box-sizing: border-box; border-radius: 10px;">
+          <div style="font-family: 'Inter', sans-serif;background-color:${color}; position:absolute;margin-top: 5px; margin-left:-1px;width:${d.width}px;height:90px;border-radius:10px;border: 1px solid #E4E2E9">
+          <div style="font-size:15px;color:#499276;margin-left:20px;margin-top:12px; width: 220px; height: 10px; font-weight: bold""> 
+            Programa: ${d.data.A} </div>
+          <div style="display: flex; margin-left: 19px; margin-top: 23px; justify-content: space-between; margin-right: 30px; height: 16px; ">
+            <p>Qtde de Projetos</p>
+              <p style="font-weight: bold;">${d.data.Quant_Proj}</p>
+          </div>
         </div>
       </div>
   `}
   if (d.data.tipo == 3){
     return `
-    <div style="background-color: #0000ff;; height: 80px; box-sizing: border-box; border-radius: 10px;">
-          <div style="font-family: 'Inter', sans-serif;background-color:${color}; position:absolute;margin-top: 5px; margin-left:-1px;width:${d.width}px;height:155px;border-radius:10px;border: 1px solid #E4E2E9">
-          ${getSubortinates(d, i, arr, state)}
-          <div style="font-size:15px;color:#08011E;margin-left:20px;margin-top:12px; width: 140px; height: 10px"> ${
-             d.data.name
+    <div style="background-color: #499276; height: 80px; box-sizing: border-box; border-radius: 10px;">
+          <div style="font-family: 'Inter', sans-serif;background-color:${color}; position:absolute;margin-top: 5px; margin-left:-1px;width:${d.width}px;height:208px;border-radius:10px;border: 1px solid #E4E2E9">
+          <div style="font-size:15px;color:#08011E;margin-left:20px; width: 220px; height: 10px; font-weight: bold; margin-bottom: 50px; vertical-align: middle"> <p> ${
+             d.data.ObjetivoArea
+          } </p> </div>
+          <div style="display: flex; margin-left: 19px; margin-top: 20px; justify-content: space-between; margin-right: 30px; height: 20px; ">
+            <p>Previsão</p>
+              <p style="font-weight: bold;">${nulo(d.data.previsao)}</p>
+          </div>
+          <div style="display: flex; flex-direction: row; text-align: right; margin-left: 19px; margin-right: 30px; height: 30px; margin-top: 20px">
+              <p style="height: 5px">Resultado:</p>
+              <p style="font-weight: bold; margin-left: 5px">${d.data.Resultado_Esperado}</p>
+          </div>
+          <div style="display: flex; margin-left: 19px; margin-top: 15px; justify-content: space-between; margin-right: 30px; height: 16px; ">
+            <p style="height: 5px">Fase:</p>
+              <p style="font-weight: bold;">${d.data.Fase}</p>
+          </div>
+       </div>
+    </div>
+  `}
+  if (d.data.tipo == 4){
+    return `
+    <div style="background-color: #223324; height: 80px; box-sizing: border-box; border-radius: 10px;">
+          <div style="font-family: 'Inter', sans-serif;background-color:${color}; position:absolute;margin-top: 5px; margin-left:-1px;width:${d.width}px;height:90px;border-radius:10px;border: 1px solid #E4E2E9">
+          <div style="font-size:20px;color:#08011E; text-align:center; margin-left: 20px; margin-top: 35px; width: 220px; height: 10px; font-weight: bold"> ${
+              d.data.Area
           } </div>
-          <div style="display: flex;">
-           ${getBar()}
-           <div style="margin-top: 23px; margin-left: 15px; font-family: 'sans-serif';">
-             <p>${perc * 100}%</p>
-           </div>
-           </div>
         </div>
       </div>
   `}
@@ -189,12 +199,12 @@ const nodeContent = (d, i, arr, state) => {
 
 //  return `
 
-//    <div style="background-color: #9999; height: 80px; box-sizing: border-box; border-radius: 10px;">
+//    <div style="background-color: #223324; height: 80px; box-sizing: border-box; border-radius: 10px;">
 //      <div style="font-family: 'Inter', sans-serif;background-color:${color}; position:absolute;margin-top: 5px; margin-left:-1px;width:${d.width}px;height:${d.height}px;border-radius:10px;border: 1px solid #E4E2E9">
 //          ${getTypeCard(d, i, arr, state)}
 //          ${getSubortinates(d, i, arr, state)}
 //          <div style="font-size:15px;color:#08011E;margin-left:20px;margin-top:12px; width: 140px; height: 10px"> ${
-//              d.data.name
+//              d.data.A
 //          } </div>
 //          <div style="display: flex;">
 //            ${getBar()}
@@ -219,7 +229,7 @@ d3.csv(
         .nodeHeight((d) => 97.55)
         .nodeWidth((d) => 260)
         .childrenMargin((d) => 50)
-        .compactMarginBetween((d) => 25)
+        .compactMarginBetween((d) => 140)
         .compactMarginPair((d) => 50)
         .neightbourMargin((a, b) => 25)
         .siblingsMargin((d) => 25)
