funçaõ de verificação

--- a/public/index.html
+++ b/public/index.html
@@ -140,7 +140,7 @@ const nodeContent = (d, i, arr, state) => {
     <div style="background-color: #223324; height: 80px; box-sizing: border-box; border-radius: 10px;">
           <div style="font-family: 'Inter', sans-serif;background-color:${color}; position:absolute;margin-top: 5px; margin-left:-1px;width:${d.width}px;height:${d.height}px;border-radius:10px;border: 1px solid #E4E2E9">
           <div style="font-size:13px;color:#08011E;margin-left:20px;margin-top:20px; width: 540px; height: 10px; font-weight: 700"> 
-            Objetivo: ${d.data.A} </div>
+            Objetivo: ${d.data.Area} </div>
           <div style="display: flex; margin-left: 20px; justify-content: space-between; margin-right: 30px; margin-bottom: 20px; font-weight: 600; margin-top: 10px; font-size: 13px; font-family: 'Inter', sans-serif">
               <p>Qtde de Projetos</p>
               <p style="font-weight: bold;">${d.data.Quant_Proj}</p>
@@ -153,7 +153,7 @@ const nodeContent = (d, i, arr, state) => {
     <div style="background-color: #499276; height: 80px; box-sizing: border-box; border-radius: 10px;">
           <div style="font-family: 'Inter', sans-serif;background-color:${color}; position:absolute;margin-top: 5px; margin-left:-1px;width:${d.width}px;height:90px;border-radius:10px;border: 1px solid #E4E2E9">
           <div style="font-size:15px;color:#499276;margin-left:20px;margin-top:12px; width: 220px; height: 10px; font-weight: bold""> 
-            Programa: ${d.data.A} </div>
+            Programa: ${d.data.Area} </div>
           <div style="display: flex; margin-left: 19px; margin-top: 23px; justify-content: space-between; margin-right: 30px; height: 16px; ">
             <p>Qtde de Projetos</p>
               <p style="font-weight: bold;">${d.data.Quant_Proj}</p>
@@ -170,7 +170,7 @@ const nodeContent = (d, i, arr, state) => {
           } </p> </div>
           <div style="display: flex; margin-left: 19px; margin-top: 20px; justify-content: space-between; margin-right: 30px; height: 20px; ">
             <p>Previsão</p>
-              <p style="font-weight: bold;">${nulo(d.data.previsao)}</p>
+              <p style="font-weight: bold;">${nulo(d.data.Previsao)}</p>
           </div>
           <div style="display: flex; flex-direction: row; text-align: right; margin-left: 19px; margin-right: 30px; height: 30px; margin-top: 20px">
               <p style="height: 5px">Resultado:</p>
